# ChangeLog for media-plugins/libvisual-plugins
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/libvisual-plugins/ChangeLog,v 1.54 2012/05/17 15:32:19 aballier Exp $

  17 May 2012; Alexis Ballier <aballier@gentoo.org>
  libvisual-plugins-0.4.0-r2.ebuild:
  keyword ~amd64-fbsd

  05 May 2012; Jeff Horelick <jdhore@gentoo.org>
  libvisual-plugins-0.4.0-r2.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  16 Apr 2012; Jeroen Roovers <jer@gentoo.org>
  libvisual-plugins-0.4.0-r2.ebuild:
  Stable for HPPA (bug #412113).

  18 Mar 2012; Samuli Suominen <ssuominen@gentoo.org>
  libvisual-plugins-0.4.0-r2.ebuild:
  Remove USE="esd" because media-sound/esound isn't in tree anymore.

  08 Feb 2012; Jeroen Roovers <jer@gentoo.org>
  libvisual-plugins-0.4.0-r2.ebuild:
  Marked ~hppa (bug #401469).

  29 Mar 2011; Christoph Mende <angelos@gentoo.org>
  libvisual-plugins-0.4.0-r2.ebuild:
  Fixed slot deps

  29 Aug 2010; Raúl Porcel <armin76@gentoo.org>
  libvisual-plugins-0.4.0-r2.ebuild:
  Drop sparc keyword

  29 Jun 2008; Alexis Ballier <aballier@gentoo.org>
  -files/libvisual-plugins-0.4.0-qa.patch,
  -libvisual-plugins-0.4.0-r1.ebuild:
  remove old

  21 Jun 2008; Thomas Anderson <gentoofan23@gentoo.org>
  libvisual-plugins-0.4.0-r2.ebuild:
  amd64 stable, bug #224379

  08 Jun 2008; Friedrich Oslage <bluebird@gentoo.org>
  libvisual-plugins-0.4.0-r2.ebuild:
  stable on sparc, bug #224379

  05 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
  libvisual-plugins-0.4.0-r2.ebuild:
  stable x86, bug 224379

  04 Jun 2008; Markus Rothe <corsair@gentoo.org>
  libvisual-plugins-0.4.0-r2.ebuild:
  Stable on ppc64; bug #224379

  01 Jun 2008; nixnut <nixnut@gentoo.org> libvisual-plugins-0.4.0-r2.ebuild:
  Stable on ppc wrt bug 224379

*libvisual-plugins-0.4.0-r2 (03 Jan 2008)

  03 Jan 2008; Alexis Ballier <aballier@gentoo.org>
  +libvisual-plugins-0.4.0-r2.ebuild:
  Fix nastyfft plugin, bug #201867
